<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/gender"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="41dp" />

        <TextView
            android:id="@+id/gender"
            style="@style/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="29dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/birthday"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="52dp" />

        <TextView
            android:id="@+id/birth_day"
            style="@style/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="29dp" />

        <TextView
            android:id="@+id/textView5"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="39dp" />

        <TextView
            android:id="@+id/height"
            style="@style/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="29dp" />

        <TextView
            android:id="@+id/textView6"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/weight"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/lavHeartBeat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="41dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/weight"
            style="@style/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="29dp"
            android:visibility="invisible" />

        <!--  FLOATING HEART-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lavHeartBeat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/heart_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="heartbeat.json"
            app:lottie_loop="true"
            app:lottie_speed="1.5"
            tools:layout_conversion_absoluteHeight="36dp"
            tools:layout_conversion_absoluteWidth="36dp" />

        <TextView
            android:id="@+id/heart_rate"
            style="@style/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            app:layout_constraintEnd_toEndOf="@+id/lavHeartBeat"
            app:layout_constraintStart_toStartOf="@+id/lavHeartBeat"
            app:layout_constraintTop_toTopOf="@+id/weight"
            tools:layout_conversion_absoluteHeight="16dp"
            tools:layout_conversion_absoluteWidth="37dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/rriBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            tools:layout_editor_absoluteY="197dp" />

        <EditText
            android:id="@+id/query_since"
            style="@style/editText"
            android:inputType="number"
            android:text="1"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="257dp" />

        <EditText
            android:id="@+id/query_till"
            style="@style/editText"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:text="0"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heart_rate" />

        <Button
            android:id="@+id/get_daily_steps_data"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buton_steps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/ge_calories_data"
            style="@style/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calories"
            app:layout_constraintStart_toEndOf="@+id/get_daily_steps_data"
            app:layout_constraintTop_toTopOf="@+id/get_daily_steps_data" />

        <TextView
            android:id="@+id/query_results"
            style="@style/resultText"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ge_calories_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>